[project]
name = "osa-selfie-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TylerFlar", email = "tulikkovulpus@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
osa-selfie-screener = "osa_selfie_screener:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
